--- a/azure/modules/key_vault/main.tf.liquid
+++ b/azure/modules/key_vault/main.tf.liquid
@@ -1,23 +1,24 @@
-data "azurerm_client_config" "current" { }}
+data "azurerm_client_config" "current" {}
 
 resource "azurerm_user_assigned_identity" "base" {
   resource_group_name = resource_group_name
   location            = location
   name                = "{{ project_name }}-{{ environment }}-kv-user"
- }}
+}
 
 resource "random_string" "suffix" {
   length  = 4
   special = false
   upper   = false
- }}
+}
 
 resource "azurerm_key_vault" "kv" {
-  name                = "{{ project_name }}-{{ environment }}-kv-{{ random_string.suffix.result }}"
+  name                = "{{ project_name }}-{{ environment }}-kv-${random_string.suffix.result}"
   resource_group_name = resource_group_name
   location            = location
   tenant_id           = data.azurerm_client_config.current.tenant_id
   sku_name            = "standard"
+
   access_policy {
     object_id    = data.azurerm_client_config.current.object_id
     tenant_id    = data.azurerm_client_config.current.tenant_id
@@ -64,20 +65,19 @@ resource "azurerm_key_vault" "kv" {
       "List",
       "Purge",
       "Restore",
-      "Restore",
       "Set"
     ]
-   }}
+  }
 
   access_policy {
-    object_id    = azurerm_user_assigned_identity.base.principal_id
-    tenant_id    = data.azurerm_client_config.current.tenant_id
+    object_id = azurerm_user_assigned_identity.base.principal_id
+    tenant_id = data.azurerm_client_config.current.tenant_id
 
     secret_permissions = [
       "Get"
     ]
-   }}
- }}
+  }
+}
 
 resource "azurerm_key_vault_certificate" "ssl" {
   count        = ssl_certificate_path != null ? 1 : 0
@@ -86,5 +86,5 @@ resource "azurerm_key_vault_certificate" "ssl" {
 
   certificate {
     contents = filebase64(ssl_certificate_path)
-   }}
- }}
+  }
+}
