added backend-config.tfvars file in root modules

--- a/azure/environments/dev/backend-config.tfvars.liquid
+++ b/azure/environments/dev/backend-config.tfvars.liquid
@@ -1,4 +1,4 @@
 resource_group_name  = "rg-{{ project_name }}-{{ environment }}"
 storage_account_name = "{{ storage_account_name }}"
 container_name       = "tfstate"
-key                  = "{{ project_name }}/{{ environment }}/terraform.tfstate"
+key                  = key = "{{ project_name }}-{{ environment }}.tfstate"
