--- a/azure/modules/ai_foundry/main.tf.liquid
+++ b/azure/modules/ai_foundry/main.tf.liquid
@@ -1,20 +1,20 @@
 # Application Insights for AI Foundry monitoring
 resource "azurerm_application_insights" "ai_foundry_insights" {
   name                = "{{ project_name }}-{{ environment }}-ai-insights"
-  location            = location
-  resource_group_name = resource_group_name
+  location            = "{{ location }}"
+  resource_group_name = "{{ resource_group_name }}"
   application_type    = "web"
   retention_in_days   = 30
 
-  tags = merge(tags, {
+  tags = merge({{ tags }}, {
     Name = "{{ project_name }}-{{ environment }}-ai-insights"
   })
 }
 
 resource "azurerm_storage_account" "ai_foundry_storage" {
-  name                     = "{{ replace(project_name, "-", "") }}{{ environment }}aistorage"
-  resource_group_name      = resource_group_name
-  location                 = location
+  name                     = "{{ project_name | replace: '-', '' }}{{ environment }}aistorage"
+  resource_group_name      = "{{ resource_group_name }}"
+  location                 = "{{ location }}"
   account_tier             = "Standard"
   account_replication_type = "LRS"
 
@@ -26,32 +26,32 @@ resource "azurerm_storage_account" "ai_foundry_storage" {
     }
   }
 
-  tags = merge(tags, {
+  tags = merge({{ tags }}, {
     Name = "{{ project_name }}-{{ environment }}-ai-storage"
   })
 }
 
 resource "azurerm_container_registry" "ai_foundry_acr" {
-  name                = "{{ replace(project_name, "-", "") }}{{ environment }}aiacr"
-  resource_group_name = resource_group_name
-  location            = location
+  name                = "{{ project_name | replace: '-', '' }}{{ environment }}aiacr"
+  resource_group_name = "{{ resource_group_name }}"
+  location            = "{{ location }}"
   sku                 = "Standard"
   admin_enabled       = true
 
-  tags = merge(tags, {
+  tags = merge({{ tags }}, {
     Name = "{{ project_name }}-{{ environment }}-ai-acr"
   })
 }
 
 # Create Azure AI Services
 resource "azurerm_ai_services" "ai_services" {
-  name                  = "{{ replace(project_name, "-", "") }}{{ environment }}aiservices"
-  location              = openai_location
-  resource_group_name   = resource_group_name
+  name                  = "{{ project_name | replace: '-', '' }}{{ environment }}aiservices"
+  location              = "{{ openai_location }}"
+  resource_group_name   = "{{ resource_group_name }}"
   sku_name              = "S0"
-  custom_subdomain_name = "{{ replace(project_name, "-", "") }}{{ environment }}aiservices"
+  custom_subdomain_name = "{{ project_name | replace: '-', '' }}{{ environment }}aiservices"
 
-  tags = merge(tags, {
+  tags = merge({{ tags }}, {
     Name = "{{ project_name }}-{{ environment }}-ai-services"
   })
 }
@@ -59,16 +59,16 @@ resource "azurerm_ai_services" "ai_services" {
 # Create Azure AI Foundry Hub
 resource "azurerm_ai_foundry" "ai_foundry_hub" {
   name                = "{{ project_name }}-{{ environment }}-ai-hub"
-  resource_group_name = resource_group_name
-  location            = location
+  resource_group_name = "{{ resource_group_name }}"
+  location            = "{{ location }}"
   storage_account_id  = azurerm_storage_account.ai_foundry_storage.id
-  key_vault_id        = existing_key_vault_id
+  key_vault_id        = "{{ existing_key_vault_id }}"
 
   identity {
     type = "SystemAssigned"
   }
 
-  tags = merge(tags, {
+  tags = merge({{ tags }}, {
     Name = "{{ project_name }}-{{ environment }}-ai-hub"
   })
 
@@ -89,7 +89,7 @@ resource "azurerm_ai_foundry_project" "ai_foundry_project" {
     type = "SystemAssigned"
   }
 
-  tags = merge(tags, {
+  tags = merge({{ tags }}, {
     Name = "{{ project_name }}-{{ environment }}-ai-project"
   })
 
@@ -109,7 +109,7 @@ resource "azurerm_cognitive_deployment" "gpt4o_deployment" {
 
   sku {
     name     = "GlobalStandard"
-    capacity = gpt4o_capacity
+    capacity = {{ gpt4o_capacity }}
   }
 }
 
@@ -126,7 +126,7 @@ resource "azurerm_cognitive_deployment" "o3_mini_deployment" {
 
   sku {
     name     = "GlobalStandard"
-    capacity = o3_mini_capacity
+    capacity = {{ o3_mini_capacity }}
   }
 }
 
@@ -143,7 +143,7 @@ resource "azurerm_cognitive_deployment" "embedding_deployment" {
 
   sku {
     name     = "Standard"
-    capacity = embedding_capacity
+    capacity = {{ embedding_capacity }}
   }
 }
 
@@ -151,7 +151,7 @@ resource "azurerm_cognitive_deployment" "embedding_deployment" {
 resource "azurerm_key_vault_secret" "ai_services_api_key" {
   name         = "ai-services-api-key"
   value        = azurerm_ai_services.ai_services.primary_access_key
-  key_vault_id = existing_key_vault_id
+  key_vault_id = "{{ existing_key_vault_id }}"
 
   depends_on = [azurerm_ai_services.ai_services]
 }
@@ -160,7 +160,7 @@ resource "azurerm_key_vault_secret" "ai_services_api_key" {
 resource "azurerm_key_vault_secret" "ai_services_endpoint" {
   name         = "ai-services-endpoint"
   value        = azurerm_ai_services.ai_services.endpoint
-  key_vault_id = existing_key_vault_id
+  key_vault_id = "{{ existing_key_vault_id }}"
 
   depends_on = [azurerm_ai_services.ai_services]
 }
