--- a/azure/modules/acr/main.tf.liquid
+++ b/azure/modules/acr/main.tf.liquid
@@ -1,9 +1,9 @@
 resource "azurerm_container_registry" "this" {
-  for_each            = toset(acr_repo_names)
+  for_each            = toset(var.acr_repo_names)
   name                = each.key
-  resource_group_name = resource_group_name
-  location            = location
+  resource_group_name = var.resource_group_name
+  location            = var.location
   sku                 = "Basic"
   admin_enabled       = false
-  tags                = tags
+  tags                = var.tags
  }
