--- a/azure/modules/kubernetes/aks/main.tf.liquid
+++ b/azure/modules/kubernetes/aks/main.tf.liquid
@@ -3,8 +3,8 @@ data "azurerm_client_config" "current" {}
 # AKS Cluster
 resource "azurerm_kubernetes_cluster" "aks_cluster" {
   name                = "{{ project_name }}-{{ environment }}-aks-cluster"
-  location            = location
-  resource_group_name = resource_group_name
+  location            = var.location
+  resource_group_name = var.resource_group_name
   kubernetes_version  = "1.30.10"
   dns_prefix          = "aksserverlessautoscaling"
 
@@ -12,7 +12,7 @@ resource "azurerm_kubernetes_cluster" "aks_cluster" {
     name                  = "system"
     node_count            = 1
     vm_size               = "Standard_DS2_v2"
-    vnet_subnet_id        = aks_subnet_id
+    vnet_subnet_id        = var.aks_subnet_id
     auto_scaling_enabled  = true
     max_pods              = 110
     min_count             = 1
@@ -23,14 +23,14 @@ resource "azurerm_kubernetes_cluster" "aks_cluster" {
   }
 
   ingress_application_gateway {
-    gateway_id = app_gateway_id
+    gateway_id = var.app_gateway_id
   }
 
   linux_profile {
     admin_username = "kube"
 
     ssh_key {
-      key_data = k8s_ssh_key
+      key_data = var.k8s_ssh_key
     }
   }
 
@@ -60,7 +60,7 @@ resource "azurerm_kubernetes_cluster" "aks_cluster" {
 resource "azurerm_role_assignment" "aks_acr_role_assignment" {
   principal_id         = azurerm_kubernetes_cluster.aks_cluster.identity[0].principal_id
   role_definition_name = "AcrPull"
-  scope                = "/subscriptions/{{ data.azurerm_client_config.current.subscription_id }}/resourceGroups/{{ common_resource_group_name }}"
+  scope                = "/subscriptions/{{ data.azurerm_client_config.current.subscription_id }}/resourceGroups/var.common_resource_group_name"
 }
 
 # Grant Reader access to the current user for the AKS managed resource group
@@ -72,14 +72,14 @@ resource "azurerm_role_assignment" "aks_managed_rg_reader" {
 
 # AGIC requires Reader access to the resource group containing the Application Gateway
 resource "azurerm_role_assignment" "agic_resource_group_reader" {
-  scope                = "/subscriptions/{{ data.azurerm_client_config.current.subscription_id }}/resourceGroups/{{ resource_group_name }}"
+  scope                = "/subscriptions/{{ data.azurerm_client_config.current.subscription_id }}/resourceGroups/var.resource_group_name"
   role_definition_name = "Reader"
   principal_id         = azurerm_kubernetes_cluster.aks_cluster.ingress_application_gateway[0].ingress_application_gateway_identity[0].object_id
 }
 
 # AGIC requires Contributor access to the Application Gateway itself
 resource "azurerm_role_assignment" "agic_app_gateway_contributor" {
-  scope                = app_gateway_id
+  scope                = var.app_gateway_id
   role_definition_name = "Contributor"
   principal_id         = azurerm_kubernetes_cluster.aks_cluster.ingress_application_gateway[0].ingress_application_gateway_identity[0].object_id
 }
@@ -93,7 +93,7 @@ resource "azurerm_role_assignment" "agic_managed_identity_operator" {
 
 # AGIC requires Network Contributor access to the Application Gateway subnet
 resource "azurerm_role_assignment" "agic_subnet_network_contributor" {
-  scope                = app_gateway_subnet_id
+  scope                = var.app_gateway_subnet_id
   role_definition_name = "Network Contributor"
   principal_id         = azurerm_kubernetes_cluster.aks_cluster.ingress_application_gateway[0].ingress_application_gateway_identity[0].object_id
 }
