--- a/azure/modules/security_groups/main.tf.liquid
+++ b/azure/modules/security_groups/main.tf.liquid
@@ -1,32 +1,37 @@
 resource "azurerm_application_security_group" "bastion_asg" {
-  name                = "${var.project_name}-${var.environment}-bastion-asg"
+  name                = "{{ project_name }}-{{ environment }}-bastion-asg"
   location            = var.location
   resource_group_name = var.resource_group_name
 }
 
 resource "azurerm_application_security_group" "vm_k8s_asg" {
-  name                = "${var.project_name}-${var.environment}-k8s-asg"
+  name                = "{{ project_name }}-{{ environment }}-k8s-asg"
   location            = var.location
   resource_group_name = var.resource_group_name
 }
 
 resource "azurerm_application_security_group" "app_gateway_asg" {
-  name                = "${var.project_name}-${var.environment}-app-gateway-asg"
+  name                = "{{ project_name }}-{{ environment }}-app-gateway-asg"
   location            = var.location
   resource_group_name = var.resource_group_name
 }
 
 resource "azurerm_application_security_group" "frontend_private_asg" {
-  name                = "${var.project_name}-${var.environment}-frontend-private-asg"
+  name                = "{{ project_name }}-{{ environment }}-frontend-private-asg"
   location            = var.location
   resource_group_name = var.resource_group_name
 }
 
 resource "azurerm_network_security_group" "k8s_vm_sg" {
-  name                = "${var.project_name}-${var.environment}-k8s-vm-nsg"
+  name                = "{{ project_name }}-{{ environment }}-k8s-vm-nsg"
   location            = var.location
   resource_group_name = var.resource_group_name
-  tags                = merge({ Name = "K8s VM NSG" }, var.tags)
+  tags = merge(
+    {% if tags %}{{ tags | json }}{% else %}{}{% endif %},
+    {
+      "Name" = "K8s VM NSG"
+    }
+  )
 
   security_rule {
     name                                       = "AllowAllFromAppGateway"
@@ -78,10 +83,15 @@ resource "azurerm_network_security_group" "k8s_vm_sg" {
 }
 
 resource "azurerm_network_security_group" "bastion_nsg" {
-  name                = "${var.project_name}-${var.environment}-bastion-nsg"
-  location            = var.location
-  resource_group_name = var.resource_group_name
-  tags                = merge({ Name = "Bastion NSG" }, var.tags)
+  name                = "{{ project_name }}-{{ environment }}-bastion-nsg"
+  location            = "{{ location }}"
+  resource_group_name = "{{ resource_group_name }}"
+  tags = merge(
+    {% if tags %}{{ tags | json }}{% else %}{}{% endif %},
+    {
+      "Name" = "Bastion NSG"
+    }
+  )
 
   security_rule {
     name                                       = "AllowSSHFromSpecificIPs"
@@ -97,10 +107,10 @@ resource "azurerm_network_security_group" "bastion_nsg" {
 }
 
 resource "azurerm_network_security_group" "app_gateway_nsg" {
-  name                = "${var.project_name}-${var.environment}-app-gateway-nsg"
-  location            = var.location
-  resource_group_name = var.resource_group_name
-  tags                = var.tags
+  name                = "{{ project_name }}-{{ environment }}-app-gateway-nsg"
+  location            = "{{ location }}"
+  resource_group_name = "{{ resource_group_name }}"
+  tags                = {% if tags %}{{ tags | json }}{% else %}{}{% endif %}
 
   security_rule {
     name                       = "allow-http-vpn"
@@ -152,4 +162,61 @@ resource "azurerm_network_security_group" "app_gateway_nsg" {
 }
 
 resource "azurerm_network_security_group" "frontend_private_nsg" {
-  name
+  name                = "{{ project_name }}-{{ environment }}-frontend-private-nsg"
+  location            = var.location
+  resource_group_name = var.resource_group_name
+  tags = merge(
+    {% if tags %}{{ tags | json }}{% else %}{}{% endif %},
+    {
+      "Name" = "Frontend Private NSG"
+    }
+  )
+
+  security_rule {
+    name                       = "AllowVPNToFrontend"
+    priority                   = 100
+    direction                  = "Inbound"
+    access                     = "Allow"
+    protocol                   = "*"
+    source_port_range          = "*"
+    destination_port_range     = "*"
+    source_address_prefix      = var.vpn_client_address_space[0]
+    destination_address_prefix = cidrsubnet(element(var.vnet_address_space, 0), var.subnet_prefix_length, var.frontend_subnet_offset)
+  }
+
+  security_rule {
+    name                       = "AllowFrontendToBackend"
+    priority                   = 101
+    direction                  = "Outbound"
+    access                     = "Allow"
+    protocol                   = "*"
+    source_port_range          = "*"
+    destination_port_range     = "*"
+    source_address_prefix      = cidrsubnet(element(var.vnet_address_space, 0), var.subnet_prefix_length, var.frontend_subnet_offset)
+    destination_address_prefix = cidrsubnet(element(var.vnet_address_space, 0), var.subnet_prefix_length, var.k8s_private_subnet_offset)
+  }
+
+  security_rule {
+    name                       = "AllowFrontendToSQL"
+    priority                   = 102
+    direction                  = "Outbound"
+    access                     = "Allow"
+    protocol                   = "Tcp"
+    source_port_range          = "*"
+    destination_port_range     = "1433"
+    source_address_prefix      = cidrsubnet(element(var.vnet_address_space, 0), var.subnet_prefix_length, var.frontend_subnet_offset)
+    destination_address_prefix = "*"
+  }
+
+  security_rule {
+    name                       = "DenyInternetInbound"
+    priority                   = 4096
+    direction                  = "Inbound"
+    access                     = "Deny"
+    protocol                   = "*"
+    source_port_range          = "*"
+    destination_port_range     = "*"
+    source_address_prefix      = "Internet"
+    destination_address_prefix = "*"
+  }
+}
