--- a/azure/modules/vpn_gateway/main.tf.liquid
+++ b/azure/modules/vpn_gateway/main.tf.liquid
@@ -1,36 +1,36 @@
 # Gateway Subnet (required for VPN Gateway)
 resource "azurerm_subnet" "gateway_subnet" {
   name                 = "GatewaySubnet"
-  resource_group_name  = resource_group_name
-  virtual_network_name = split("/", virtual_network_id)[8]
-  address_prefixes     = [gateway_subnet_address_prefix]
+  resource_group_name  = var.resource_group_name
+  virtual_network_name = split("/", var.virtual_network_id)[8]
+  address_prefixes     = [var.gateway_subnet_address_prefix]
 }
 
 # Public IP for VPN Gateway
 resource "azurerm_public_ip" "vpn_gateway_ip" {
-  name                = "${project_name}-${environment}-vpn-gateway-ip"
-  location            = location
-  resource_group_name = resource_group_name
+  name                = "{{ project_name }}-{{ environment }}-vpn-gateway-ip"
+  location            = var.location
+  resource_group_name = var.resource_group_name
   allocation_method   = "Static"
   sku                 = "Standard"
-  zones               = availability_zones
+  zones               = var.availability_zones
 
   tags = merge(tags, {
-    Name = "${project_name}-${environment}-vpn-gateway-ip"
+    Name = "{{ project_name }}-{{ environment }}-vpn-gateway-ip"
   })
 }
 
 resource "azurerm_virtual_network_gateway" "vpn_gateway" {
-  name                = "${project_name}-${environment}-vpn-gateway"
-  location            = location
-  resource_group_name = resource_group_name
+  name                = "{{ project_name }}-{{ environment }}-vpn-gateway"
+  location            = var.location
+  resource_group_name = var.resource_group_name
 
   type     = "Vpn"
   vpn_type = "RouteBased"
 
   active_active = false
   enable_bgp    = false
-  sku           = length(availability_zones) > 0 ? "VpnGw1AZ" : "VpnGw1"
+  sku           = length(var.availability_zones) > 0 ? "VpnGw1AZ" : "VpnGw1"
   generation    = "Generation1"
 
   ip_configuration {
@@ -41,15 +41,15 @@ resource "azurerm_virtual_network_gateway" "vpn_gateway" {
   }
 
   vpn_client_configuration {
-    address_space         = vpn_client_address_space
-    aad_tenant            = aad_tenant
-    aad_audience          = aad_audience
-    aad_issuer            = aad_issuer
+    address_space         = var.vpn_client_address_space
+    aad_tenant            = var.aad_tenant
+    aad_audience          = var.aad_audience
+    aad_issuer            = var.aad_issuer
     vpn_client_protocols  = ["OpenVPN"]
   }
 
   tags = merge(tags, {
-    Name = "${project_name}-${environment}-vpn-gateway"
+    Name = "{{ project_name }}-{{ environment }}-vpn-gateway"
   })
 
   timeouts {
@@ -60,38 +60,38 @@ resource "azurerm_virtual_network_gateway" "vpn_gateway" {
 
 # Private subnet for frontend applications
 resource "azurerm_subnet" "frontend_private_subnet" {
-  name                 = "${project_name}-${environment}-frontend-private"
-  resource_group_name  = resource_group_name
-  virtual_network_name = split("/", virtual_network_id)[8]
-  address_prefixes     = [cidrsubnet(element(vnet_address_space, 0), subnet_prefix_length, frontend_subnet_offset)]
+  name                 = "{{ project_name }}-{{ environment }}-frontend-private"
+  resource_group_name  = var.resource_group_name
+  virtual_network_name = split("/", var.virtual_network_id)[8]
+  address_prefixes     = [cidrsubnet(element(var.vnet_address_space, 0), var.subnet_prefix_length, var.frontend_subnet_offset)]
 }
 
 # Associate NSG with frontend private subnet
 resource "azurerm_subnet_network_security_group_association" "frontend_private_nsg_association" {
   subnet_id                 = azurerm_subnet.frontend_private_subnet.id
-  network_security_group_id = frontend_private_nsg_id
+  network_security_group_id = var.frontend_private_nsg_id
 }
 
 # Route table for VPN clients to access private subnets
 resource "azurerm_route_table" "vpn_route_table" {
-  name                = "${project_name}-${environment}-vpn-routes"
-  location            = location
-  resource_group_name = resource_group_name
+  name                = "{{ project_name }}-{{ environment }}-vpn-routes"
+  location            = var.location
+  resource_group_name = var.resource_group_name
 
   route {
     name           = "vpn-to-frontend"
-    address_prefix = cidrsubnet(element(vnet_address_space, 0), subnet_prefix_length, frontend_subnet_offset)
+    address_prefix = cidrsubnet(element(var.vnet_address_space, 0), var.subnet_prefix_length, var.frontend_subnet_offset)
     next_hop_type  = "VnetLocal"
   }
 
   route {
     name           = "vpn-to-k8s"
-    address_prefix = cidrsubnet(element(vnet_address_space, 0), subnet_prefix_length, k8s_private_subnet_offset)
+    address_prefix = cidrsubnet(element(var.vnet_address_space, 0), var.subnet_prefix_length, var.k8s_private_subnet_offset)
     next_hop_type  = "VnetLocal"
   }
 
   tags = merge(tags, {
-    Name = "${project_name}-${environment}-vpn-routes"
+    Name = "{{ project_name }}-{{ environment }}-vpn-routes"
   })
 }
 
